@startuml
interface ISelectCleaningJobStaffView {
    +  <<event>> Search : EventHandler? 
    +  <<event>> SelectionChanged : EventHandler? 
    +  <<event>> SortRequested : EventHandler<SortRequestEventArgs>? 
    + DisableAll() : void
    + EnableAll() : void
    + DataGridText : string <<get>> <<set>>
    + SetSelectedItemsById(models:IEnumerable<int>) : void
}
class "IDisplayView`1"<T> {
}
class "List`1"<T> {
}
"IDisplayView`1" "<DisplayStaffModel>" <|-- ISelectCleaningJobStaffView
ISelectCleaningJobStaffView --> "SelectedItems<DisplayStaffModel>" "List`1"
@enduml
